trunk/Archive2/2c/9985140bad5d22/output
main.cpp: In function 'int main()':
main.cpp:10:13: error: use of deleted function 'std::unique_ptr<_Tp, _Dp>::unique_ptr(const std::unique_ptr<_Tp, _Dp>&) [with _Tp = int; _Dp = std::default_delete<int>]'
     sink(ptr);
             ^
In file included from /usr/local/include/c++/4.9.0/memory:81:0,
                 from main.cpp:1:
/usr/local/include/c++/4.9.0/bits/unique_ptr.h:356:7: note: declared here
       unique_ptr(const unique_ptr&) = delete;
       ^
main.cpp:3:6: error:   initializing argument 1 of 'void sink(std::unique_ptr<int>)'
 void sink(std::unique_ptr<int>) {}
      ^
