trunk/Archive2/2c/9985140bad5d22/main.cpp
#include <memory>

void sink(std::unique_ptr<int>) {}

template<class T>
std::unique_ptr<T> make_unique() {return {};}

int main() {
    std::unique_ptr<int>&& ptr = make_unique<int>(); 
    sink(ptr);
}